@@ -36,7 +36,6 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -56,17 +55,16 @@ import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
 import org.apache.lucene.util.SuppressForbidden;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.StreamingResponseCallback;
-import org.apache.solr.client.solrj.impl.CloudHttp2SolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.impl.ClusterStateProvider;
-import org.apache.solr.client.solrj.impl.Http2SolrClient;
-import org.apache.solr.client.solrj.impl.StreamingJavaBinResponseParser;
+import org.apache.solr.client.solrj.jetty.HttpJettySolrClient;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.QueryRequest;
+import org.apache.solr.client.solrj.request.SolrQuery;
+import org.apache.solr.client.solrj.response.StreamingJavaBinResponseParser;
+import org.apache.solr.client.solrj.response.StreamingResponseCallback;
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.cloud.DocCollection;
@@ -94,7 +92,7 @@ public class ExportTool extends ToolBase {
           .hasArg()
           .argName("NAME")
           .desc("Name of the collection.")
-          .build();
+          .get();
 
   private static final Option OUTPUT_OPTION =
       Option.builder()
@@ -103,7 +101,7 @@ public class ExportTool extends ToolBase {
           .argName("PATH")
           .desc(
               "Path to output the exported data, and optionally the file name, defaults to 'collection-name'.")
-          .build();
+          .get();
 
   private static final Option FORMAT_OPTION =
       Option.builder()
@@ -111,10 +109,10 @@ public class ExportTool extends ToolBase {
           .hasArg()
           .argName("FORMAT")
           .desc("Output format for exported docs (json, jsonl or javabin), defaulting to json.")
-          .build();
+          .get();
 
   private static final Option COMPRESS_OPTION =
-      Option.builder().longOpt("compress").desc("Compress the output. Defaults to false.").build();
+      Option.builder().longOpt("compress").desc("Compress the output. Defaults to false.").get();
 
   private static final Option LIMIT_OPTION =
       Option.builder()
@@ -122,7 +120,7 @@ public class ExportTool extends ToolBase {
           .hasArg()
           .argName("#")
           .desc("Maximum number of docs to download. Default is 100, use -1 for all docs.")
-          .build();
+          .get();
 
   private static final Option QUERY_OPTION =
       Option.builder()
@@ -130,7 +128,7 @@ public class ExportTool extends ToolBase {
           .hasArg()
           .argName("QUERY")
           .desc("A custom query, default is '*:*'.")
-          .build();
+          .get();
 
   private static final Option FIELDS_OPTION =
       Option.builder()
@@ -138,7 +136,18 @@ public class ExportTool extends ToolBase {
           .hasArg()
           .argName("FIELDA,FIELDB")
           .desc("Comma separated list of fields to export. By default all fields are fetched.")
-          .build();
+          .get();
+
+  /** Parameters for the export command, independent of the command line parser. */
+  record ExportParams(
+      String url,
+      String credentials,
+      String query,
+      String output,
+      String format,
+      boolean compress,
+      String fields,
+      String limit) {}
 
   public ExportTool(ToolRuntime runtime) {
     super(runtime);
@@ -159,8 +168,8 @@ public class ExportTool extends ToolBase {
         .addOption(LIMIT_OPTION)
         .addOption(QUERY_OPTION)
         .addOption(FIELDS_OPTION)
-        .addOption(CommonCLIOptions.SOLR_URL_OPTION)
-        .addOption(CommonCLIOptions.CREDENTIALS_OPTION);
+        .addOption(CommonCLIOptions.CREDENTIALS_OPTION)
+        .addOptionGroup(getConnectionOptions());
   }
 
   public abstract static class Info {
@@ -219,45 +228,45 @@ public class ExportTool extends ToolBase {
       } else if (Files.isDirectory(Path.of(this.out))) {
         this.out = this.out + "/" + coll;
       }
-      this.out = this.out + '.' + this.format;
-      if (compress) {
+      if (!hasExtension(this.out)) {
+        this.out = this.out + '.' + this.format;
+      }
+      if (compress & !this.out.endsWith(".gz")) {
         this.out = this.out + ".gz";
       }
     }
 
+    public static boolean hasExtension(String filename) {
+      return filename.contains(".json")
+          || filename.contains(".jsonl")
+          || filename.contains(".javabin");
+    }
+
     DocsSink getSink() {
-      DocsSink docSink = null;
-      switch (format) {
-        case JAVABIN:
-          docSink = new JavabinSink(this);
-          break;
-        case JSON:
-          docSink = new JsonSink(this);
-          break;
-        case "jsonl":
-          docSink = new JsonWithLinesSink(this);
-          break;
-      }
-      return docSink;
+      return switch (format) {
+        case JAVABIN -> new JavabinSink(this);
+        case JSON -> new JsonSink(this);
+        case "jsonl" -> new JsonWithLinesSink(this);
+        default -> null;
+      };
     }
 
     abstract void exportDocs() throws Exception;
 
     void fetchUniqueKey() throws SolrServerException, IOException {
-      Http2SolrClient.Builder builder =
-          new Http2SolrClient.Builder().withOptionalBasicAuthCredentials(credentials);
+      var builder = new HttpJettySolrClient.Builder().withOptionalBasicAuthCredentials(credentials);
 
       solrClient =
-          new CloudHttp2SolrClient.Builder(Collections.singletonList(baseurl))
-              .withInternalClientBuilder(builder)
-              .build();
+          new CloudSolrClient.Builder(List.of(baseurl)).withHttpClientBuilder(builder).build();
       NamedList<Object> response =
           solrClient.request(
               new GenericSolrRequest(
                       SolrRequest.METHOD.GET,
                       "/schema/uniquekey",
-                      SolrParams.of("collection", coll))
-                  .setRequiresCollection(true));
+                      SolrRequest.SolrRequestType.ADMIN,
+                      SolrParams.of())
+                  .setRequiresCollection(true),
+              coll);
       uniqueKey = (String) response.get("uniqueKey");
     }
 
@@ -282,34 +291,88 @@ public class ExportTool extends ToolBase {
 
   @Override
   public void runImpl(CommandLine cli) throws Exception {
-    String url = null;
-    if (cli.hasOption(CommonCLIOptions.SOLR_URL_OPTION)) {
+    String url;
+    if (CLIUtils.hasConnectionOption(cli)) {
       if (!cli.hasOption(COLLECTION_NAME_OPTION)) {
         throw new IllegalArgumentException(
-            "Must specify -c / --name parameter with --solr-url to post documents.");
+            "Must specify -c / --name parameter with a connection target to export documents.");
       }
       url = CLIUtils.normalizeSolrUrl(cli) + "/solr/" + cli.getOptionValue(COLLECTION_NAME_OPTION);
 
     } else {
-      // think about support --zk-host someday.
-      throw new IllegalArgumentException("Must specify --solr-url.");
+      throw new IllegalArgumentException(
+          "Must specify a connection target via -s/--solr-connection, --solr-url, or --zk-host.");
     }
-    String credentials = cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION);
-    Info info = new MultiThreadedRunner(runtime, url, credentials);
-    info.query = cli.getOptionValue(QUERY_OPTION, "*:*");
+    ExportParams params =
+        new ExportParams(
+            url,
+            cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION),
+            cli.getOptionValue(QUERY_OPTION, "*:*"),
+            cli.getOptionValue(OUTPUT_OPTION),
+            cli.getOptionValue(FORMAT_OPTION),
+            cli.hasOption(COMPRESS_OPTION),
+            cli.getOptionValue(FIELDS_OPTION),
+            cli.getOptionValue(LIMIT_OPTION, "100"));
+    export(params);
+  }
 
-    info.setOutFormat(
-        cli.getOptionValue(OUTPUT_OPTION),
-        cli.getOptionValue(FORMAT_OPTION),
-        cli.hasOption(COMPRESS_OPTION));
-    info.fields = cli.getOptionValue(FIELDS_OPTION);
-    info.setLimit(cli.getOptionValue(LIMIT_OPTION, "100"));
+  void export(ExportParams params) throws Exception {
+    Info info = new MultiThreadedRunner(runtime, params.url(), params.credentials());
+    info.query = params.query();
+    info.setOutFormat(params.output(), params.format(), params.compress());
+    info.fields = params.fields();
+    info.setLimit(params.limit());
     info.exportDocs();
   }
 
   abstract static class DocsSink {
     Info info;
     OutputStream fos;
+
+    /** Process a SolrDocument into a Map, handling special fields and date conversion. */
+    protected Map<String, Object> processDocument(SolrDocument doc) {
+      Map<String, Object> m = CollectionUtil.newLinkedHashMap(doc.size());
+      doc.forEach(
+          (s, field) -> {
+            if (s.equals("_version_") || s.equals("_roor_")) return;
+            if (field instanceof List) {
+              if (((List<?>) field).size() == 1) {
+                field = ((List<?>) field).getFirst();
+              }
+            }
+            field = constructDateStr(field);
+            if (field instanceof List<?> list) {
+              if (hasDate(list)) {
+                ArrayList<Object> listCopy = new ArrayList<>(list.size());
+                for (Object o : list) listCopy.add(constructDateStr(o));
+                field = listCopy;
+              }
+            }
+            m.put(s, field);
+          });
+      return m;
+    }
+
+    /** Check if a list contains any Date objects */
+    protected boolean hasDate(List<?> list) {
+      boolean hasDate = false;
+      for (Object o : list) {
+        if (o instanceof Date) {
+          hasDate = true;
+          break;
+        }
+      }
+      return hasDate;
+    }
+
+    /** Convert Date objects to ISO formatted strings */
+    protected Object constructDateStr(Object field) {
+      if (field instanceof Date) {
+        field =
+            DateTimeFormatter.ISO_INSTANT.format(Instant.ofEpochMilli(((Date) field).getTime()));
+      }
+      return field;
+    }
 
     abstract void start() throws IOException;
 
@@ -356,48 +419,11 @@ public class ExportTool extends ToolBase {
     @Override
     public synchronized void accept(SolrDocument doc) throws IOException {
       charArr.reset();
-      Map<String, Object> m = CollectionUtil.newLinkedHashMap(doc.size());
-      doc.forEach(
-          (s, field) -> {
-            if (s.equals("_version_") || s.equals("_roor_")) return;
-            if (field instanceof List) {
-              if (((List<?>) field).size() == 1) {
-                field = ((List<?>) field).get(0);
-              }
-            }
-            field = constructDateStr(field);
-            if (field instanceof List<?> list) {
-              if (hasdate(list)) {
-                ArrayList<Object> listCopy = new ArrayList<>(list.size());
-                for (Object o : list) listCopy.add(constructDateStr(o));
-                field = listCopy;
-              }
-            }
-            m.put(s, field);
-          });
+      Map<String, Object> m = processDocument(doc);
       jsonWriter.write(m);
       writer.write(charArr.getArray(), charArr.getStart(), charArr.getEnd());
       writer.append('\n');
       super.accept(doc);
-    }
-
-    private boolean hasdate(List<?> list) {
-      boolean hasDate = false;
-      for (Object o : list) {
-        if (o instanceof Date) {
-          hasDate = true;
-          break;
-        }
-      }
-      return hasDate;
-    }
-
-    private Object constructDateStr(Object field) {
-      if (field instanceof Date) {
-        field =
-            DateTimeFormatter.ISO_INSTANT.format(Instant.ofEpochMilli(((Date) field).getTime()));
-      }
-      return field;
     }
   }
 
@@ -435,25 +461,7 @@ public class ExportTool extends ToolBase {
     @Override
     public synchronized void accept(SolrDocument doc) throws IOException {
       charArr.reset();
-      Map<String, Object> m = CollectionUtil.newLinkedHashMap(doc.size());
-      doc.forEach(
-          (s, field) -> {
-            if (s.equals("_version_") || s.equals("_roor_")) return;
-            if (field instanceof List) {
-              if (((List<?>) field).size() == 1) {
-                field = ((List<?>) field).get(0);
-              }
-            }
-            field = constructDateStr(field);
-            if (field instanceof List<?> list) {
-              if (hasdate(list)) {
-                ArrayList<Object> listCopy = new ArrayList<>(list.size());
-                for (Object o : list) listCopy.add(constructDateStr(o));
-                field = listCopy;
-              }
-            }
-            m.put(s, field);
-          });
+      Map<String, Object> m = processDocument(doc);
       if (firstDoc) {
         firstDoc = false;
       } else {
@@ -463,25 +471,6 @@ public class ExportTool extends ToolBase {
       writer.write(charArr.getArray(), charArr.getStart(), charArr.getEnd());
       writer.append('\n');
       super.accept(doc);
-    }
-
-    private boolean hasdate(List<?> list) {
-      boolean hasDate = false;
-      for (Object o : list) {
-        if (o instanceof Date) {
-          hasDate = true;
-          break;
-        }
-      }
-      return hasDate;
-    }
-
-    private Object constructDateStr(Object field) {
-      if (field instanceof Date) {
-        field =
-            DateTimeFormatter.ISO_INSTANT.format(Instant.ofEpochMilli(((Date) field).getTime()));
-      }
-      return field;
     }
   }
 
@@ -625,6 +614,8 @@ public class ExportTool extends ToolBase {
       }
     }
 
+    @SuppressWarnings(
+        "ReferenceEquality") // EOFDOC is a unique sentinel; identity check is intentional
     private void addConsumer(CountDownLatch consumerlatch) {
       consumerThreadpool.execute(
           () -> {
@@ -661,7 +652,7 @@ public class ExportTool extends ToolBase {
         this.replica = replica;
       }
 
-      boolean exportDocsFromCore() throws IOException, SolrServerException {
+      void exportDocsFromCore() throws IOException, SolrServerException {
         // reference the replica's node URL, not the baseUrl in scope, which could be anywhere
         try (SolrClient client = CLIUtils.getSolrClient(replica.getBaseUrl(), credentials)) {
           expectedDocs = getDocCount(replica.getCoreName(), client, query);
@@ -686,8 +677,8 @@ public class ExportTool extends ToolBase {
           StreamingJavaBinResponseParser responseParser =
               new StreamingJavaBinResponseParser(getStreamer(wrapper));
           while (true) {
-            if (failed) return false;
-            if (docsWritten.get() > limit) return true;
+            if (failed) return;
+            if (docsWritten.get() > limit) return;
             params.set(CursorMarkParams.CURSOR_MARK_PARAM, cursorMark);
             request = new QueryRequest(params);
             request.setResponseParser(responseParser);
@@ -704,9 +695,9 @@ public class ExportTool extends ToolBase {
                       StrUtils.formatString(
                           "Could not download all docs from core {0}, docs expected: {1}, received: {2}",
                           replica.getCoreName(), expectedDocs, receivedDocs.get()));
-                  return false;
+                  return;
                 }
-                return true;
+                return;
               }
               cursorMark = nextCursorMark;
               runtime.print(".");
@@ -717,7 +708,7 @@ public class ExportTool extends ToolBase {
                       + "/"
                       + replica.getCoreName());
               failed = true;
-              return false;
+              return;
             }
           }
         }
