@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.io.Writer;
 import java.util.Calendar;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Set;
@@ -87,9 +86,7 @@ public abstract class TextResponseWriter implements TextWriter {
       this.rawReturnFields = NO_RAW_FIELDS;
     } else {
       this.rawFields =
-          rawFields.size() == 1
-              ? Collections.singleton(rawFields.iterator().next())
-              : new HashSet<>(rawFields);
+          rawFields.size() == 1 ? Set.of(rawFields.iterator().next()) : new HashSet<>(rawFields);
       this.rawShim = new RawShimTextResponseWriter(this);
       this.rawReturnFields = returnFields;
     }
@@ -112,6 +109,7 @@ public abstract class TextResponseWriter implements TextWriter {
    * NOTE: strict object equality check against {@link #rawReturnFields}; see javadocs for {@link
    * #NO_RAW_FIELDS}
    */
+  @SuppressWarnings("ReferenceEquality") // strict object identity is intentional, see javadoc above
   protected final boolean shouldWriteRaw(String fname, ReturnFields returnFields) {
     return rawReturnFields == returnFields && rawFields.contains(fname);
   }
