@@ -21,6 +21,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.apache.lucene.index.DocValuesSkipIndexType;
 import org.apache.lucene.index.DocValuesType;
 import org.apache.lucene.index.IndexOptions;
 import org.apache.lucene.index.IndexableField;
@@ -45,7 +46,7 @@ public final class SchemaField extends FieldProperties implements IndexableField
   boolean required = false; // this can't be final since it may be changed dynamically
 
   /** Declared field property overrides */
-  Map<String, Object> args = Collections.emptyMap();
+  Map<String, Object> args = Map.of();
 
   /**
    * Create a new SchemaField with the given name and type, using all the default properties from
@@ -529,6 +530,11 @@ public final class SchemaField extends FieldProperties implements IndexableField
   @Override
   public DocValuesType docValuesType() {
     return DocValuesType.NONE;
+  }
+
+  @Override
+  public DocValuesSkipIndexType docValuesSkipIndexType() {
+    return DocValuesSkipIndexType.NONE;
   }
 
   @Override
