@@ -19,7 +19,6 @@ package org.apache.solr.spelling;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import org.apache.lucene.index.Term;
@@ -107,7 +106,7 @@ public class DirectSolrSpellChecker extends SolrSpellChecker {
 
     SolrParams params = config.toSolrParams();
 
-    log.info("init: {}", config);
+    log.debug("init: {}", config);
     String name = super.init(config, core);
 
     Comparator<SuggestWord> comp = SuggestWordQueue.DEFAULT_COMPARATOR;
@@ -184,18 +183,16 @@ public class DirectSolrSpellChecker extends SolrSpellChecker {
 
   @Override
   public SpellingResult getSuggestions(SpellingOptions options) throws IOException {
-    log.debug("getSuggestions: {}", options.tokens);
-
     SpellingResult result = new SpellingResult();
     float accuracy =
         (options.accuracy == Float.MIN_VALUE) ? checker.getAccuracy() : options.accuracy;
 
-    for (Token token : options.tokens) {
-      if (token.length() == 0) {
-        result.add(token, Collections.emptyList());
+    for (SpellCheckToken token : options.tokens) {
+      String tokenText = token.text();
+      if (tokenText.isEmpty()) {
+        result.add(token, List.of());
         continue;
       }
-      String tokenText = token.toString();
       Term term = new Term(field, tokenText);
       int freq = options.reader.docFreq(term);
       int count =
@@ -227,7 +224,7 @@ public class DirectSolrSpellChecker extends SolrSpellChecker {
         }
       }
       if (suggestions.length == 0 && freq == 0) {
-        List<String> empty = Collections.emptyList();
+        List<String> empty = List.of();
         result.add(token, empty);
       } else {
         for (SuggestWord suggestion : suggestions) {
