@@ -16,12 +16,12 @@
  */
 package org.apache.solr.cloud.api.collections;
 
+import static org.apache.lucene.tests.util.LuceneTestCase.Nightly;
 import static org.apache.solr.common.cloud.ZkStateReader.REPLICATION_FACTOR;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -37,19 +37,20 @@ import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import org.apache.lucene.tests.util.LuceneTestCase;
+import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrQuery;
+import org.apache.solr.client.solrj.SolrRequest.METHOD;
+import org.apache.solr.client.solrj.SolrRequest.SolrRequestType;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.CloudLegacySolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
+import org.apache.solr.client.solrj.impl.CollectionScopedSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
-import org.apache.solr.client.solrj.request.QueryRequest;
+import org.apache.solr.client.solrj.request.GenericSolrRequest;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.response.CollectionAdminResponse;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.client.solrj.response.RequestStatusState;
-import org.apache.solr.cloud.AbstractDistribZkTestBase;
+import org.apache.solr.cloud.AbstractFullDistribZkTestBase;
 import org.apache.solr.cloud.BasicDistributedZkTest;
 import org.apache.solr.cloud.SolrCloudTestCase;
 import org.apache.solr.cloud.StoppableIndexingThread;
@@ -77,7 +78,7 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-@LuceneTestCase.Nightly
+@Nightly
 @LogLevel(
     "org.apache.solr.cloud.Overseer=DEBUG;org.apache.solr.cloud.overseer=DEBUG;org.apache.solr.cloud.api.collections=DEBUG;org.apache.solr.cloud.OverseerTaskProcessor=DEBUG;org.apache.solr.util.TestInjection=DEBUG")
 public class ShardSplitTest extends BasicDistributedZkTest {
@@ -107,6 +108,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     incompleteOrOverlappingCustomRangeTest();
     splitByUniqueKeyTest();
     splitByRouteFieldTest();
+    splitByNumericRouteFieldTest();
     splitByRouteKeyTest();
 
     // todo can't call waitForThingsToLevelOut because it looks for jettys of all shards
@@ -134,8 +136,10 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     waitForThingsToLevelOut(15, TimeUnit.SECONDS);
 
     DocCollection defCol =
-        cloudClient.getClusterState().getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
-    Replica replica = defCol.getReplicas().get(0);
+        cloudClient
+            .getClusterState()
+            .getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
+    Replica replica = defCol.replicaStream().findFirst().orElseThrow();
     String nodeName = replica.getNodeName();
 
     String collectionName = "testSplitStaticIndexReplication_" + splitMethod.toLower();
@@ -150,14 +154,13 @@ public class ShardSplitTest extends BasicDistributedZkTest {
             collectionName, 30, TimeUnit.SECONDS, SolrCloudTestCase.activeClusterShape(1, 1));
 
     var builder =
-        new RandomizingCloudSolrClientBuilder(
-            Collections.singletonList(zkServer.getZkAddress()), Optional.empty());
+        new RandomizingCloudSolrClientBuilder(List.of(zkServer.getZkAddress()), Optional.empty());
 
     try (CloudSolrClient client =
         builder
             .withDefaultCollection(collectionName)
             .sendUpdatesOnlyToShardLeaders()
-            .withHttpClient(((CloudLegacySolrClient) cloudClient).getHttpClient())
+            .withHttpClient(cloudClient.getHttpClient())
             .build()) {
       StoppableIndexingThread thread =
           new StoppableIndexingThread(controlClient, client, "i1", true);
@@ -232,19 +235,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
               CollectionAdminRequest.addReplicaToShard(collectionName, SHARD1_0);
           // use control client because there are fewer chances of it being the node being restarted
           // this is to avoid flakiness of test because of NoHttpResponseExceptions
-          String control_collection =
-              client
-                  .getClusterState()
-                  .getCollection("control_collection")
-                  .getReplicas()
-                  .get(0)
-                  .getBaseUrl();
-          try (var control =
-              new HttpSolrClient.Builder(control_collection)
-                  .withHttpClient(((CloudLegacySolrClient) client).getHttpClient())
-                  .build()) {
-            state = addReplica.processAndWait(control, 30);
-          }
+          state = addReplica.processAndWait(controlClient, 30);
 
           ZkStateReader.from(cloudClient)
               .waitForState(
@@ -305,11 +296,12 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     int count = 0;
     for (Replica replica : shard.getReplicas()) {
       var client =
-          new HttpSolrClient.Builder(replica.getBaseUrl())
-              .withDefaultCollection(replica.getCoreName())
-              .withHttpClient(((CloudLegacySolrClient) cloudClient).getHttpClient())
-              .build();
-      QueryResponse response = client.query(new SolrQuery("q", "*:*", "distrib", "false"));
+          clients.stream()
+              .filter(c -> c.getBaseURL().equals(replica.getBaseUrl()))
+              .findAny()
+              .orElseThrow();
+      QueryResponse response =
+          client.query(replica.getCoreName(), new SolrQuery("q", "*:*", "distrib", "false"));
       if (log.isInfoEnabled()) {
         log.info(
             "Found numFound={} on replica: {}",
@@ -336,6 +328,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
    * <p>See SOLR-9439
    */
   @Test
+  @AwaitsFix(bugUrl = "https://issues.apache.org/jira/browse/SOLR-18277")
   public void testSplitAfterFailedSplit() throws Exception {
     waitForThingsToLevelOut(15, TimeUnit.SECONDS);
 
@@ -348,10 +341,11 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     }
   }
 
-  private void splitAfterFailedSplit() throws KeeperException, InterruptedException {
+  private void splitAfterFailedSplit()
+      throws KeeperException, InterruptedException, TimeoutException {
     try {
       CollectionAdminRequest.SplitShard splitShard =
-          CollectionAdminRequest.splitShard(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+          CollectionAdminRequest.splitShard(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
       splitShard.setShardName(SHARD1);
       splitShard.process(cloudClient);
       fail("Shard split was not supposed to succeed after failure injection!");
@@ -361,9 +355,10 @@ public class ShardSplitTest extends BasicDistributedZkTest {
 
     // assert that sub-shards cores exist and sub-shard is in construction state
     ZkStateReader zkStateReader = ZkStateReader.from(cloudClient);
-    zkStateReader.forceUpdateCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+    zkStateReader.forceUpdateCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
     ClusterState state = zkStateReader.getClusterState();
-    DocCollection collection = state.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+    DocCollection collection =
+        state.getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
 
     // should be cleaned up
     Slice shard10 = collection.getSlice(SHARD1_0);
@@ -376,7 +371,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     TestInjection.reset(); // let the split succeed
     try {
       CollectionAdminRequest.SplitShard splitShard =
-          CollectionAdminRequest.splitShard(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+          CollectionAdminRequest.splitShard(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
       splitShard.setShardName(SHARD1);
       splitShard.process(cloudClient);
       // Yay!
@@ -389,6 +384,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
 
   @Test
   @Nightly
+  @AwaitsFix(bugUrl = "https://issues.apache.org/jira/browse/SOLR-18277")
   public void testSplitAfterFailedSplit2() throws Exception {
     waitForThingsToLevelOut(15, TimeUnit.SECONDS);
 
@@ -516,7 +512,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
         () -> {
           ZkStateReader zkStateReader = ZkStateReader.from(cloudClient);
           zkStateReader.registerCollectionStateWatcher(
-              AbstractDistribZkTestBase.DEFAULT_COLLECTION,
+              AbstractFullDistribZkTestBase.DEFAULT_COLLECTION,
               (liveNodes, collectionState) -> {
                 if (stop.get()) {
                   return true; // abort and remove the watch
@@ -527,7 +523,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
                   if (killed.compareAndSet(false, true)) {
                     log.info(
                         "Monkey thread found 2 replicas for {} {}",
-                        AbstractDistribZkTestBase.DEFAULT_COLLECTION,
+                        AbstractFullDistribZkTestBase.DEFAULT_COLLECTION,
                         SHARD1);
                     CloudJettyRunner cjetty = shardToLeaderJetty.get(SHARD1);
                     try {
@@ -543,7 +539,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
                 }
                 log.info(
                     "Monkey thread found only one replica for {} {}",
-                    AbstractDistribZkTestBase.DEFAULT_COLLECTION,
+                    AbstractFullDistribZkTestBase.DEFAULT_COLLECTION,
                     SHARD1);
                 return false;
               });
@@ -553,7 +549,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     monkeyThread.start();
     try {
       CollectionAdminRequest.SplitShard splitShard =
-          CollectionAdminRequest.splitShard(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+          CollectionAdminRequest.splitShard(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
       splitShard.setShardName(SHARD1);
       String asyncId = splitShard.processAsync(cloudClient);
       RequestStatusState splitStatus = null;
@@ -590,23 +586,23 @@ public class ShardSplitTest extends BasicDistributedZkTest {
       }
       cjetty.jetty.start();
       ZkStateReader.from(cloudClient)
-          .forceUpdateCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+          .forceUpdateCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
       if (log.isInfoEnabled()) {
         log.info(
             "Current collection state: {}",
-            printClusterStateInfo(AbstractDistribZkTestBase.DEFAULT_COLLECTION));
+            printClusterStateInfo(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION));
       }
 
       // true if sub-shard states switch to 'active' eventually
       AtomicBoolean areSubShardsActive = new AtomicBoolean(false);
       if (splitStatus == RequestStatusState.COMPLETED) {
         // all sub-shard replicas were created successfully so all cores must recover eventually
-        waitForRecoveriesToFinish(AbstractDistribZkTestBase.DEFAULT_COLLECTION, true);
+        waitForRecoveriesToFinish(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION, true);
         // let's wait for the overseer to switch shard states
         CountDownLatch latch = new CountDownLatch(1);
         ZkStateReader.from(cloudClient)
             .registerCollectionStateWatcher(
-                AbstractDistribZkTestBase.DEFAULT_COLLECTION,
+                AbstractFullDistribZkTestBase.DEFAULT_COLLECTION,
                 (liveNodes, collectionState) -> {
                   Slice parent = collectionState.getSlice(SHARD1);
                   Slice slice10 = collectionState.getSlice(SHARD1_0);
@@ -657,7 +653,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
       if (areSubShardsActive.get()) {
         ClusterState clusterState = cloudClient.getClusterState();
         DocCollection collection =
-            clusterState.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+            clusterState.getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
         int numReplicasChecked = assertConsistentReplicas(collection.getSlice(SHARD1_0));
         assertEquals(
             "We should have checked consistency for exactly 2 replicas of shard1_0",
@@ -707,7 +703,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
       TimeOut timeOut = new TimeOut(30, TimeUnit.SECONDS, TimeSource.NANO_TIME);
       while (!timeOut.hasTimedOut()) {
         timeOut.sleep(500);
-        if (ZkStateReader.from(cloudClient).getZkClient().exists(path, true)) {
+        if (ZkStateReader.from(cloudClient).getZkClient().exists(path)) {
           log.info("=== found lock node");
           break;
         }
@@ -725,13 +721,13 @@ public class ShardSplitTest extends BasicDistributedZkTest {
       // make sure the lock still exists
       assertTrue(
           "lock znode expected but missing",
-          ZkStateReader.from(cloudClient).getZkClient().exists(path, true));
+          ZkStateReader.from(cloudClient).getZkClient().exists(path));
       // let the first split proceed
       TestInjection.splitLatch.countDown();
       timeOut = new TimeOut(30, TimeUnit.SECONDS, TimeSource.NANO_TIME);
       while (!timeOut.hasTimedOut()) {
         timeOut.sleep(500);
-        if (!ZkStateReader.from(cloudClient).getZkClient().exists(path, true)) {
+        if (!ZkStateReader.from(cloudClient).getZkClient().exists(path)) {
           break;
         }
       }
@@ -782,9 +778,11 @@ public class ShardSplitTest extends BasicDistributedZkTest {
   private void incompleteOrOverlappingCustomRangeTest() throws Exception {
     ClusterState clusterState = cloudClient.getClusterState();
     final DocRouter router =
-        clusterState.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION).getRouter();
+        clusterState.getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION).getRouter();
     Slice shard1 =
-        clusterState.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION).getSlice(SHARD1);
+        clusterState
+            .getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION)
+            .getSlice(SHARD1);
     DocRouter.Range shard1Range =
         shard1.getRange() != null ? shard1.getRange() : router.fullRange();
 
@@ -794,9 +792,9 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     // test with only one range
     subRanges.add(ranges.get(0));
     try {
-      splitShard(AbstractDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
+      splitShard(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
       fail("Shard splitting with just one custom hash range should not succeed");
-    } catch (SolrClient.RemoteSolrException e) {
+    } catch (RemoteSolrException e) {
       log.info("Expected exception:", e);
     }
     subRanges.clear();
@@ -805,9 +803,9 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     subRanges.add(ranges.get(3)); // order shouldn't matter
     subRanges.add(ranges.get(0));
     try {
-      splitShard(AbstractDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
+      splitShard(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
       fail("Shard splitting with missing hashes in between given ranges should not succeed");
-    } catch (SolrClient.RemoteSolrException e) {
+    } catch (RemoteSolrException e) {
       log.info("Expected exception:", e);
     }
     subRanges.clear();
@@ -818,9 +816,9 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     subRanges.add(ranges.get(2));
     subRanges.add(new DocRouter.Range(ranges.get(3).min - 15, ranges.get(3).max));
     try {
-      splitShard(AbstractDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
+      splitShard(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
       fail("Shard splitting with overlapping ranges should not succeed");
-    } catch (SolrClient.RemoteSolrException e) {
+    } catch (RemoteSolrException e) {
       log.info("Expected exception:", e);
     }
     subRanges.clear();
@@ -829,9 +827,11 @@ public class ShardSplitTest extends BasicDistributedZkTest {
   private void splitByUniqueKeyTest() throws Exception {
     ClusterState clusterState = cloudClient.getClusterState();
     final DocRouter router =
-        clusterState.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION).getRouter();
+        clusterState.getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION).getRouter();
     Slice shard1 =
-        clusterState.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION).getSlice(SHARD1);
+        clusterState
+            .getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION)
+            .getSlice(SHARD1);
     DocRouter.Range shard1Range =
         shard1.getRange() != null ? shard1.getRange() : router.fullRange();
     List<DocRouter.Range> subRanges = new ArrayList<>();
@@ -849,12 +849,12 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     int numReplicas = shard1.getReplicas().size();
 
     ZkStateReader.from(cloudClient)
-        .forceUpdateCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION);
+        .forceUpdateCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION);
     clusterState = cloudClient.getClusterState();
     if (log.isDebugEnabled()) {
       log.debug(
           "-- COLLECTION: {}",
-          clusterState.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION));
+          clusterState.getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION));
     }
     del("*:*");
     for (int id = 0; id <= 100; id++) {
@@ -908,11 +908,12 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     try {
       for (int i = 0; i < 3; i++) {
         try {
-          splitShard(AbstractDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
+          splitShard(
+              AbstractFullDistribZkTestBase.DEFAULT_COLLECTION, SHARD1, subRanges, null, false);
           log.info("Layout after split: \n");
           printLayout();
           break;
-        } catch (SolrClient.RemoteSolrException e) {
+        } catch (RemoteSolrException e) {
           if (e.code() != 500) {
             throw e;
           }
@@ -966,51 +967,121 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     getCommonCloudSolrClient();
     String baseUrl = getBaseUrlFromZk(cloudClient.getClusterState(), collectionName);
 
-    try (SolrClient collectionClient = getHttpSolrClient(baseUrl, collectionName)) {
+    SolrClient collectionClient =
+        new CollectionScopedSolrClient(getJetty(baseUrl).getSolrClient(), collectionName);
 
-      ClusterState clusterState = cloudClient.getClusterState();
-      final DocRouter router = clusterState.getCollection(collectionName).getRouter();
-      Slice shard1 = clusterState.getCollection(collectionName).getSlice(SHARD1);
-      DocRouter.Range shard1Range =
-          shard1.getRange() != null ? shard1.getRange() : router.fullRange();
-      final List<DocRouter.Range> ranges = router.partitionRange(2, shard1Range);
-      final int[] docCounts = new int[ranges.size()];
+    ClusterState clusterState = cloudClient.getClusterState();
+    final DocRouter router = clusterState.getCollection(collectionName).getRouter();
+    Slice shard1 = clusterState.getCollection(collectionName).getSlice(SHARD1);
+    DocRouter.Range shard1Range =
+        shard1.getRange() != null ? shard1.getRange() : router.fullRange();
+    final List<DocRouter.Range> ranges = router.partitionRange(2, shard1Range);
+    final int[] docCounts = new int[ranges.size()];
 
-      for (int i = 100; i <= 200; i++) {
-        // See comment in ShardRoutingTest for hash distribution
-        String shardKey = "" + (char) ('a' + (i % 26));
+    for (int i = 100; i <= 200; i++) {
+      // See comment in ShardRoutingTest for hash distribution
+      String shardKey = "" + (char) ('a' + (i % 26));
 
-        collectionClient.add(getDoc(id, i, "n_ti", i, shard_fld, shardKey));
-        int idx = getHashRangeIdx(router, ranges, shardKey);
-        if (idx != -1) {
-          docCounts[idx]++;
-        }
+      collectionClient.add(getDoc(id, i, "n_ti", i, shard_fld, shardKey));
+      int idx = getHashRangeIdx(router, ranges, shardKey);
+      if (idx != -1) {
+        docCounts[idx]++;
       }
-
-      for (int i = 0; i < docCounts.length; i++) {
-        int docCount = docCounts[i];
-        log.info("Shard shard1_{} docCount = {}", i, docCount);
-      }
-
-      collectionClient.commit();
-
-      trySplit(collectionName, null, SHARD1, 3);
-
-      waitForRecoveriesToFinish(collectionName, false);
-
-      assertEquals(
-          docCounts[0],
-          collectionClient
-              .query(new SolrQuery("*:*").setParam("shards", "shard1_0"))
-              .getResults()
-              .getNumFound());
-      assertEquals(
-          docCounts[1],
-          collectionClient
-              .query(new SolrQuery("*:*").setParam("shards", "shard1_1"))
-              .getResults()
-              .getNumFound());
     }
+
+    for (int i = 0; i < docCounts.length; i++) {
+      int docCount = docCounts[i];
+      log.info("Shard shard1_{} docCount = {}", i, docCount);
+    }
+
+    collectionClient.commit();
+
+    trySplit(collectionName, null, SHARD1, 3);
+
+    waitForRecoveriesToFinish(collectionName, false);
+
+    assertEquals(
+        docCounts[0],
+        collectionClient
+            .query(new SolrQuery("*:*").setParam("shards", "shard1_0"))
+            .getResults()
+            .getNumFound());
+    assertEquals(
+        docCounts[1],
+        collectionClient
+            .query(new SolrQuery("*:*").setParam("shards", "shard1_1"))
+            .getResults()
+            .getNumFound());
+    assertEquals(101, collectionClient.query(new SolrQuery("*:*")).getResults().getNumFound());
+  }
+
+  public void splitByNumericRouteFieldTest() throws Exception {
+    log.info("Starting splitByNumericRouteFieldTest");
+    String collectionName = "numericRouteFieldColl";
+    int numShards = 4;
+    int replicationFactor = 2;
+
+    HashMap<String, List<Integer>> collectionInfos = new HashMap<>();
+    String shardField = "shard_l";
+    try (CloudSolrClient client = createCloudClient(null)) {
+      Map<String, Object> props =
+          Map.of(
+              REPLICATION_FACTOR,
+              replicationFactor,
+              CollectionHandlingUtils.NUM_SLICES,
+              numShards,
+              "router.field",
+              shardField);
+
+      createCollection(collectionInfos, collectionName, props, client);
+    }
+
+    List<Integer> list = collectionInfos.get(collectionName);
+    checkForCollection(collectionName, list);
+
+    waitForRecoveriesToFinish(false);
+
+    getCommonCloudSolrClient();
+    String baseUrl = getBaseUrlFromZk(cloudClient.getClusterState(), collectionName);
+
+    SolrClient collectionClient =
+        new CollectionScopedSolrClient(getJetty(baseUrl).getSolrClient(), collectionName);
+
+    ClusterState clusterState = cloudClient.getClusterState();
+    final DocRouter router = clusterState.getCollection(collectionName).getRouter();
+    Slice shard1 = clusterState.getCollection(collectionName).getSlice(SHARD1);
+    DocRouter.Range shard1Range =
+        shard1.getRange() != null ? shard1.getRange() : router.fullRange();
+    final List<DocRouter.Range> ranges = router.partitionRange(2, shard1Range);
+    final int[] docCounts = new int[ranges.size()];
+
+    for (int i = 100; i <= 200; i++) {
+      collectionClient.add(getDoc(id, i, "n_ti", i, shardField, i));
+      int idx = getHashRangeIdx(router, ranges, Integer.toString(i));
+      if (idx != -1) {
+        docCounts[idx]++;
+      }
+    }
+
+    collectionClient.commit();
+
+    trySplit(collectionName, null, SHARD1, 3);
+
+    waitForRecoveriesToFinish(collectionName, false);
+
+    assertEquals(
+        docCounts[0],
+        collectionClient
+            .query(new SolrQuery("*:*").setParam("shards", "shard1_0"))
+            .getResults()
+            .getNumFound());
+    assertEquals(
+        docCounts[1],
+        collectionClient
+            .query(new SolrQuery("*:*").setParam("shards", "shard1_1"))
+            .getResults()
+            .getNumFound());
+    assertEquals(101, collectionClient.query(new SolrQuery("*:*")).getResults().getNumFound());
   }
 
   private void splitByRouteKeyTest() throws Exception {
@@ -1037,92 +1108,92 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     getCommonCloudSolrClient();
     String baseUrl = getBaseUrlFromZk(cloudClient.getClusterState(), collectionName);
 
-    try (SolrClient collectionClient = getHttpSolrClient(baseUrl, collectionName)) {
+    SolrClient collectionClient =
+        new CollectionScopedSolrClient(getJetty(baseUrl).getSolrClient(), collectionName);
 
-      String splitKey = "b!";
+    String splitKey = "b!";
 
-      ClusterState clusterState = cloudClient.getClusterState();
-      final DocRouter router = clusterState.getCollection(collectionName).getRouter();
-      Slice shard1 = clusterState.getCollection(collectionName).getSlice(SHARD1);
-      DocRouter.Range shard1Range =
-          shard1.getRange() != null ? shard1.getRange() : router.fullRange();
-      final List<DocRouter.Range> ranges =
-          ((CompositeIdRouter) router).partitionRangeByKey(splitKey, shard1Range);
-      final int[] docCounts = new int[ranges.size()];
+    ClusterState clusterState = cloudClient.getClusterState();
+    final DocRouter router = clusterState.getCollection(collectionName).getRouter();
+    Slice shard1 = clusterState.getCollection(collectionName).getSlice(SHARD1);
+    DocRouter.Range shard1Range =
+        shard1.getRange() != null ? shard1.getRange() : router.fullRange();
+    final List<DocRouter.Range> ranges =
+        ((CompositeIdRouter) router).partitionRangeByKey(splitKey, shard1Range);
+    final int[] docCounts = new int[ranges.size()];
 
-      int uniqIdentifier = (1 << 12);
-      int splitKeyDocCount = 0;
-      for (int i = 100; i <= 200; i++) {
-        // See comment in ShardRoutingTest for hash distribution
-        String shardKey = "" + (char) ('a' + (i % 26));
+    int uniqIdentifier = (1 << 12);
+    int splitKeyDocCount = 0;
+    for (int i = 100; i <= 200; i++) {
+      // See comment in ShardRoutingTest for hash distribution
+      String shardKey = "" + (char) ('a' + (i % 26));
 
-        String idStr = shardKey + "!" + i;
-        collectionClient.add(
-            getDoc(id, idStr, "n_ti", (shardKey + "!").equals(splitKey) ? uniqIdentifier : i));
-        int idx = getHashRangeIdx(router, ranges, idStr);
-        if (idx != -1) {
-          docCounts[idx]++;
-        }
-        if (splitKey.equals(shardKey + "!")) splitKeyDocCount++;
+      String idStr = shardKey + "!" + i;
+      collectionClient.add(
+          getDoc(id, idStr, "n_ti", (shardKey + "!").equals(splitKey) ? uniqIdentifier : i));
+      int idx = getHashRangeIdx(router, ranges, idStr);
+      if (idx != -1) {
+        docCounts[idx]++;
       }
-
-      for (int i = 0; i < docCounts.length; i++) {
-        int docCount = docCounts[i];
-        log.info("Shard shard1_{} docCount = {}", i, docCount);
-      }
-      log.info("Route key doc count = {}", splitKeyDocCount);
-
-      collectionClient.commit();
-
-      trySplit(collectionName, splitKey, null, 3);
-
-      waitForRecoveriesToFinish(collectionName, false);
-      SolrQuery solrQuery = new SolrQuery("*:*");
-      assertEquals(
-          "DocCount on shard1_0 does not match",
-          docCounts[0],
-          collectionClient
-              .query(solrQuery.setParam("shards", "shard1_0"))
-              .getResults()
-              .getNumFound());
-      assertEquals(
-          "DocCount on shard1_1 does not match",
-          docCounts[1],
-          collectionClient
-              .query(solrQuery.setParam("shards", "shard1_1"))
-              .getResults()
-              .getNumFound());
-      assertEquals(
-          "DocCount on shard1_2 does not match",
-          docCounts[2],
-          collectionClient
-              .query(solrQuery.setParam("shards", "shard1_2"))
-              .getResults()
-              .getNumFound());
-
-      solrQuery = new SolrQuery("n_ti:" + uniqIdentifier);
-      assertEquals(
-          "shard1_0 must have 0 docs for route key: " + splitKey,
-          0,
-          collectionClient
-              .query(solrQuery.setParam("shards", "shard1_0"))
-              .getResults()
-              .getNumFound());
-      assertEquals(
-          "Wrong number of docs on shard1_1 for route key: " + splitKey,
-          splitKeyDocCount,
-          collectionClient
-              .query(solrQuery.setParam("shards", "shard1_1"))
-              .getResults()
-              .getNumFound());
-      assertEquals(
-          "shard1_2 must have 0 docs for route key: " + splitKey,
-          0,
-          collectionClient
-              .query(solrQuery.setParam("shards", "shard1_2"))
-              .getResults()
-              .getNumFound());
+      if (splitKey.equals(shardKey + "!")) splitKeyDocCount++;
     }
+
+    for (int i = 0; i < docCounts.length; i++) {
+      int docCount = docCounts[i];
+      log.info("Shard shard1_{} docCount = {}", i, docCount);
+    }
+    log.info("Route key doc count = {}", splitKeyDocCount);
+
+    collectionClient.commit();
+
+    trySplit(collectionName, splitKey, null, 3);
+
+    waitForRecoveriesToFinish(collectionName, false);
+    SolrQuery solrQuery = new SolrQuery("*:*");
+    assertEquals(
+        "DocCount on shard1_0 does not match",
+        docCounts[0],
+        collectionClient
+            .query(solrQuery.setParam("shards", "shard1_0"))
+            .getResults()
+            .getNumFound());
+    assertEquals(
+        "DocCount on shard1_1 does not match",
+        docCounts[1],
+        collectionClient
+            .query(solrQuery.setParam("shards", "shard1_1"))
+            .getResults()
+            .getNumFound());
+    assertEquals(
+        "DocCount on shard1_2 does not match",
+        docCounts[2],
+        collectionClient
+            .query(solrQuery.setParam("shards", "shard1_2"))
+            .getResults()
+            .getNumFound());
+
+    solrQuery = new SolrQuery("n_ti:" + uniqIdentifier);
+    assertEquals(
+        "shard1_0 must have 0 docs for route key: " + splitKey,
+        0,
+        collectionClient
+            .query(solrQuery.setParam("shards", "shard1_0"))
+            .getResults()
+            .getNumFound());
+    assertEquals(
+        "Wrong number of docs on shard1_1 for route key: " + splitKey,
+        splitKeyDocCount,
+        collectionClient
+            .query(solrQuery.setParam("shards", "shard1_1"))
+            .getResults()
+            .getNumFound());
+    assertEquals(
+        "shard1_2 must have 0 docs for route key: " + splitKey,
+        0,
+        collectionClient
+            .query(solrQuery.setParam("shards", "shard1_2"))
+            .getResults()
+            .getNumFound());
   }
 
   private void trySplit(String collectionName, String splitKey, String shardId, int maxTries)
@@ -1131,7 +1202,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
       try {
         splitShard(collectionName, shardId, null, splitKey, false);
         break;
-      } catch (SolrClient.RemoteSolrException e) {
+      } catch (RemoteSolrException e) {
         if (e.code() != 500) {
           throw e;
         }
@@ -1153,11 +1224,11 @@ public class ShardSplitTest extends BasicDistributedZkTest {
       clusterState = zkStateReader.getClusterState();
       slice1_0 =
           clusterState
-              .getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION)
+              .getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION)
               .getSlice("shard1_0");
       slice1_1 =
           clusterState
-              .getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION)
+              .getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION)
               .getSlice("shard1_1");
       if (slice1_0.getState() == Slice.State.ACTIVE && slice1_1.getState() == Slice.State.ACTIVE) {
         break;
@@ -1189,20 +1260,18 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     SolrQuery query = new SolrQuery("*:*").setRows(1000).setFields("id", "_version_");
     query.set("distrib", false);
 
-    Replica shard1_0 = getLeaderFromZk(AbstractDistribZkTestBase.DEFAULT_COLLECTION, SHARD1_0);
+    Replica shard1_0 = getLeaderFromZk(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION, SHARD1_0);
     QueryResponse response;
-    try (SolrClient shard1_0Client =
-        getHttpSolrClient(shard1_0.getBaseUrl(), shard1_0.getCoreName())) {
-      response = shard1_0Client.query(query);
-    }
+    SolrClient shard1_0Client = getSolrClient(shard1_0);
+    response = shard1_0Client.query(query);
+
     long shard10Count = response.getResults().getNumFound();
 
-    Replica shard1_1 = getLeaderFromZk(AbstractDistribZkTestBase.DEFAULT_COLLECTION, SHARD1_1);
+    Replica shard1_1 = getLeaderFromZk(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION, SHARD1_1);
     QueryResponse response2;
-    try (SolrClient shard1_1Client =
-        getHttpSolrClient(shard1_1.getBaseUrl(), shard1_1.getCoreName())) {
-      response2 = shard1_1Client.query(query);
-    }
+    SolrClient shard1_1Client = getSolrClient(shard1_1);
+    response2 = shard1_1Client.query(query);
+
     long shard11Count = response2.getResults().getNumFound();
 
     logDebugHelp(docCounts, response, shard10Count, response2, shard11Count, documentIds);
@@ -1217,15 +1286,17 @@ public class ShardSplitTest extends BasicDistributedZkTest {
 
     ClusterState clusterState = cloudClient.getClusterState();
     Slice slice =
-        clusterState.getCollection(AbstractDistribZkTestBase.DEFAULT_COLLECTION).getSlice(shard);
+        clusterState
+            .getCollection(AbstractFullDistribZkTestBase.DEFAULT_COLLECTION)
+            .getSlice(shard);
     long[] numFound = new long[slice.getReplicasMap().size()];
     int c = 0;
     for (Replica replica : slice.getReplicas()) {
       String coreUrl = replica.getCoreUrl();
       QueryResponse response;
-      try (SolrClient client = getHttpSolrClient(replica)) {
-        response = client.query(query);
-      }
+      SolrClient client = getSolrClient(replica);
+      response = client.query(query);
+
       numFound[c++] = response.getResults().getNumFound();
       if (log.isInfoEnabled()) {
         log.info(
@@ -1270,20 +1341,13 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     if (splitKey != null) {
       params.set("split.key", splitKey);
     }
-    QueryRequest request = new QueryRequest(params);
-    request.setPath("/admin/collections");
+    var request =
+        new GenericSolrRequest(METHOD.POST, "/admin/collections", SolrRequestType.ADMIN, params);
 
-    String baseUrl = shardToJetty.get(SHARD1).get(0).jetty.getBaseUrl().toString();
-
-    try (SolrClient baseServer =
-        new HttpSolrClient.Builder(baseUrl)
-            .withConnectionTimeout(30, TimeUnit.SECONDS)
-            .withSocketTimeout(5, TimeUnit.MINUTES)
-            .build()) {
-      NamedList<Object> rsp = baseServer.request(request);
-      if (log.isInfoEnabled()) {
-        log.info("Shard split response: {}", Utils.toJSONString(rsp));
-      }
+    JettySolrRunner jetty = shardToJetty.get(SHARD1).getFirst().jetty;
+    NamedList<Object> rsp = jetty.getSolrClient().request(request);
+    if (log.isInfoEnabled()) {
+      log.info("Shard split response: {}", Utils.toJSONString(rsp));
     }
   }
 
