@@ -17,13 +17,11 @@
 
 package org.apache.solr.handler;
 
-import static org.apache.solr.cloud.api.collections.CollectionHandlingUtils.REQUESTID;
 import static org.apache.solr.common.params.CommonParams.ACTION;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -32,13 +30,14 @@ import org.apache.solr.api.Api;
 import org.apache.solr.api.ApiBag;
 import org.apache.solr.common.params.CollectionParams;
 import org.apache.solr.common.params.CollectionParams.CollectionAction;
+import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.CommandOperation;
 import org.apache.solr.common.util.ContentStreamBase;
 import org.apache.solr.handler.admin.CollectionsHandler;
 import org.apache.solr.handler.admin.ConfigSetsHandler;
-import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.response.SolrQueryResponse;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -70,15 +69,6 @@ public class V2ClusterAPIMappingTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testAsyncCommandStatusAllParams() throws Exception {
-    final SolrParams v1Params =
-        captureConvertedV1Params("/cluster/command-status/someId", "GET", null);
-
-    assertEquals(CollectionParams.CollectionAction.REQUESTSTATUS.lowerName, v1Params.get(ACTION));
-    assertEquals("someId", v1Params.get(REQUESTID));
-  }
-
-  @Test
   public void testClusterOverseerAllParams() throws Exception {
     final SolrParams v1Params = captureConvertedV1Params("/cluster/overseer", "GET", null);
 
@@ -92,41 +82,6 @@ public class V2ClusterAPIMappingTest extends SolrTestCaseJ4 {
     assertEquals(CollectionAction.CLUSTERSTATUS.lowerName, v1Params.get(ACTION));
   }
 
-  @Test
-  public void testDeleteCommandStatusAllParams() throws Exception {
-    final SolrParams v1Params =
-        captureConvertedV1Params("/cluster/command-status/someId", "DELETE", null);
-
-    assertEquals(CollectionParams.CollectionAction.DELETESTATUS.lowerName, v1Params.get(ACTION));
-    assertEquals("someId", v1Params.get(REQUESTID));
-  }
-
-  @Test
-  public void testAddRoleAllParams() throws Exception {
-    final SolrParams v1Params =
-        captureConvertedV1Params(
-            "/cluster",
-            "POST",
-            "{'add-role': {" + "'node': 'some_node_name', " + "'role':'some_role'}}");
-
-    assertEquals(CollectionParams.CollectionAction.ADDROLE.toString(), v1Params.get(ACTION));
-    assertEquals("some_node_name", v1Params.get("node"));
-    assertEquals("some_role", v1Params.get("role"));
-  }
-
-  @Test
-  public void testRemoveRoleAllParams() throws Exception {
-    final SolrParams v1Params =
-        captureConvertedV1Params(
-            "/cluster",
-            "POST",
-            "{'remove-role': {" + "'node': 'some_node_name', " + "'role':'some_role'}}");
-
-    assertEquals(CollectionParams.CollectionAction.REMOVEROLE.toString(), v1Params.get(ACTION));
-    assertEquals("some_node_name", v1Params.get("node"));
-    assertEquals("some_role", v1Params.get("role"));
-  }
-
   private SolrParams captureConvertedV1Params(String path, String method, String v2RequestBody)
       throws Exception {
     return doCaptureParams(path, method, v2RequestBody, mockCollectionsHandler);
@@ -138,11 +93,11 @@ public class V2ClusterAPIMappingTest extends SolrTestCaseJ4 {
     final HashMap<String, String> parts = new HashMap<>();
     final Api api = apiBag.lookup(path, method, parts);
     final SolrQueryResponse rsp = new SolrQueryResponse();
-    final LocalSolrQueryRequest req =
-        new LocalSolrQueryRequest(null, Map.of()) {
+    final SolrQueryRequestBase req =
+        new SolrQueryRequestBase(null, new ModifiableSolrParams()) {
           @Override
           public List<CommandOperation> getCommands(boolean validateInput) {
-            if (v2RequestBody == null) return Collections.emptyList();
+            if (v2RequestBody == null) return List.of();
             return ApiBag.getCommandOperations(
                 new ContentStreamBase.StringStream(v2RequestBody), api.getCommandSchema(), true);
           }
