@@ -25,14 +25,16 @@ import static org.apache.solr.filestore.TestDistribFileStore.checkAllNodesForFil
 import static org.apache.solr.filestore.TestDistribFileStore.readFile;
 import static org.apache.solr.filestore.TestDistribFileStore.uploadKey;
 
+import java.io.ByteArrayInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.Callable;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -41,15 +43,14 @@ import org.apache.lucene.analysis.core.WhitespaceTokenizerFactory;
 import org.apache.lucene.analysis.pattern.PatternReplaceCharFilterFactory;
 import org.apache.lucene.util.ResourceLoader;
 import org.apache.lucene.util.ResourceLoaderAware;
+import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.BaseHttpSolrClient;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.RequestWriter;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.request.UpdateRequest;
 import org.apache.solr.client.solrj.request.V2Request;
 import org.apache.solr.client.solrj.request.beans.PackagePayload;
@@ -63,6 +64,7 @@ import org.apache.solr.common.annotation.JsonProperty;
 import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.ReflectMapWriter;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.SolrCore;
@@ -80,6 +82,8 @@ import org.apache.solr.security.AuthorizationContext;
 import org.apache.solr.util.LogLevel;
 import org.apache.solr.util.plugin.SolrCoreAware;
 import org.apache.zookeeper.data.Stat;
+import org.eclipse.jetty.client.ContentResponse;
+import org.eclipse.jetty.client.HttpClient;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -91,7 +95,7 @@ public class TestPackages extends SolrCloudTestCase {
   @Override
   public void setUp() throws Exception {
     super.setUp();
-    System.setProperty("enable.packages", "true");
+    System.setProperty("solr.packages.enabled", "true");
     configureCluster(4)
         .withJettyConfig(jetty -> jetty.enableV2(true))
         .addConfig("conf", configset("conf3"))
@@ -105,7 +109,6 @@ public class TestPackages extends SolrCloudTestCase {
     if (cluster != null) {
       cluster.shutdown();
     }
-    System.clearProperty("enable.packages");
 
     super.tearDown();
   }
@@ -137,7 +140,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -218,7 +221,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -294,6 +297,7 @@ public class TestPackages extends SolrCloudTestCase {
         new GenericSolrRequest(
                 SolrRequest.METHOD.GET,
                 "/stream",
+                SolrRequest.SolrRequestType.ADMIN,
                 new MapSolrParams(
                     Map.of("collection", COLLECTION_NAME, WT, JAVABIN, "action", "plugins")))
             .setRequiresCollection(true),
@@ -407,7 +411,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .withMethod(SolrRequest.METHOD.POST)
             .forceV2(true)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
     delete.process(cluster.getSolrClient());
 
@@ -435,18 +439,14 @@ public class TestPackages extends SolrCloudTestCase {
 
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.add("collection", COLLECTION_NAME);
-    new GenericSolrRequest(SolrRequest.METHOD.POST, "/config/params", params) {
+    new GenericSolrRequest(
+        SolrRequest.METHOD.POST, "/config/params", SolrRequest.SolrRequestType.ADMIN, params) {
       @Override
       public RequestWriter.ContentWriter getContentWriter(String expectedType) {
         return new RequestWriter.StringPayloadContentWriter(
             "{set:{PKG_VERSIONS:{mypkg : '1.1'}}}", ClientUtils.TEXT_JSON);
       }
-
-      @Override
-      public boolean requiresCollection() {
-        return true;
-      }
-    }.process(cluster.getSolrClient());
+    }.setRequiresCollection(true).process(cluster.getSolrClient());
 
     add.version = "2.1";
     add.files = Arrays.asList(new String[] {FILE3, URP2, EXPR1});
@@ -464,18 +464,14 @@ public class TestPackages extends SolrCloudTestCase {
     verifyComponent(
         cluster.getSolrClient(), COLLECTION_NAME, "requestHandler", "/runtime", "mypkg", "1.1");
 
-    new GenericSolrRequest(SolrRequest.METHOD.POST, "/config/params", params) {
+    new GenericSolrRequest(
+        SolrRequest.METHOD.POST, "/config/params", SolrRequest.SolrRequestType.ADMIN, params) {
       @Override
       public RequestWriter.ContentWriter getContentWriter(String expectedType) {
         return new RequestWriter.StringPayloadContentWriter(
             "{set:{PKG_VERSIONS:{mypkg : '2.1'}}}", ClientUtils.TEXT_JSON);
       }
-
-      @Override
-      public boolean requiresCollection() {
-        return true;
-      }
-    }.process(cluster.getSolrClient());
+    }.setRequiresCollection(true).process(cluster.getSolrClient());
 
     // now, let's force every collection using 'mypkg' to refresh
     // so that it uses version 2.1
@@ -536,14 +532,16 @@ public class TestPackages extends SolrCloudTestCase {
       Utils.InputStreamConsumer<?> parser,
       Map<String, Object> expected)
       throws Exception {
-    try (HttpSolrClient client = (HttpSolrClient) jetty.newClient()) {
-      TestDistribFileStore.assertResponseValues(
-          10,
-          () ->
-              NavigableObject.wrap(
-                  Utils.executeGET(client.getHttpClient(), jetty.getBaseUrl() + uri, parser)),
-          expected);
-    }
+    HttpClient httpClient = jetty.getSolrClient().getHttpClient();
+    TestDistribFileStore.assertResponseValues(
+        10,
+        () -> {
+          ContentResponse rsp = httpClient.GET(jetty.getBaseUrl() + uri);
+          try (InputStream is = new ByteArrayInputStream(rsp.getContent())) {
+            return NavigableObject.wrap(parser.accept(is));
+          }
+        },
+        expected);
   }
 
   private void verifyComponent(
@@ -566,13 +564,15 @@ public class TestPackages extends SolrCloudTestCase {
                 "meta",
                 "true"));
 
-    GenericSolrRequest req1 =
-        new GenericSolrRequest(SolrRequest.METHOD.GET, "/config/" + componentType, params)
-            .setRequiresCollection(true);
     TestDistribFileStore.assertResponseValues(
         10,
         client,
-        req1,
+        new GenericSolrRequest(
+                SolrRequest.METHOD.GET,
+                "/config/" + componentType,
+                SolrRequest.SolrRequestType.ADMIN,
+                params)
+            .setRequiresCollection(true),
         Map.of(
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:package", pkg,
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:version", version));
@@ -581,7 +581,7 @@ public class TestPackages extends SolrCloudTestCase {
   @Test
   @SuppressWarnings("unchecked")
   public void testAPI() throws Exception {
-    String errPath = "/error/details[0]/errorMessages[0]";
+    String errPath = "/details[0]/errorMessages[0]";
     String FILE1 = "/mypkg/v.0.12/jar_a.jar";
     String FILE2 = "/mypkg/v.0.12/jar_b.jar";
     String FILE3 = "/mypkg/v.0.13/jar_a.jar";
@@ -594,7 +594,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     // the files are not yet there. The command should fail with error saying "No such file"
@@ -603,7 +603,7 @@ public class TestPackages extends SolrCloudTestCase {
     // post the jar file. No signature is sent
     postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1, null);
 
-    add.files = Collections.singletonList(FILE1);
+    add.files = List.of(FILE1);
     expectError(req, cluster.getSolrClient(), errPath, FILE1 + " has no signature");
     // now we upload the keys
     byte[] derFile = readFile("cryptokeys/pub_key512.der");
@@ -616,7 +616,7 @@ public class TestPackages extends SolrCloudTestCase {
         "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
     // with correct signature
     // after uploading the file, let's delete the keys to see if we get proper error message
-    add.files = Collections.singletonList(FILE2);
+    add.files = List.of(FILE2);
     /*expectError(req, cluster.getSolrClient(), errPath,
     "ZooKeeper does not have any public keys");*/
 
@@ -631,8 +631,7 @@ public class TestPackages extends SolrCloudTestCase {
         1,
         () ->
             NavigableObject.wrap(
-                Utils.fromJSON(
-                    cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[0]:version", "0.12", ":packages:test_pkg[0]:files[0]", FILE2));
 
     // post a new jar with a proper signature
@@ -645,7 +644,7 @@ public class TestPackages extends SolrCloudTestCase {
     // this time we are adding the second version of the package (0.13)
     add.version = "0.13";
     add.pkg = "test_pkg";
-    add.files = Collections.singletonList(FILE3);
+    add.files = List.of(FILE3);
 
     // this request should succeed
     req.process(cluster.getSolrClient());
@@ -654,8 +653,7 @@ public class TestPackages extends SolrCloudTestCase {
         1,
         () ->
             NavigableObject.wrap(
-                Utils.fromJSON(
-                    cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[1]:version", "0.13", ":packages:test_pkg[1]:files[0]", FILE3));
 
     // Now we will just delete one version
@@ -666,7 +664,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
 
     // we are expecting an error
@@ -679,8 +677,7 @@ public class TestPackages extends SolrCloudTestCase {
         1,
         () ->
             NavigableObject.wrap(
-                Utils.fromJSON(
-                    cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[0]:version", "0.13", ":packages:test_pkg[0]:files[0]", FILE3));
 
     // So far we have been verifying the details with  ZK directly
@@ -692,10 +689,9 @@ public class TestPackages extends SolrCloudTestCase {
           new Callable<NavigableObject>() {
             @Override
             public NavigableObject call() throws Exception {
-              try (HttpSolrClient solrClient = (HttpSolrClient) jetty.newClient()) {
-                return (NavigableObject)
-                    Utils.executeGET(solrClient.getHttpClient(), path, Utils.JAVABINCONSUMER);
-              }
+              HttpClient solrClient = jetty.getSolrClient().getHttpClient();
+              byte[] bytes = solrClient.GET(path).getContent();
+              return (NavigableObject) new JavaBinCodec().unmarshal(bytes);
             }
           },
           Map.of(
@@ -744,6 +740,7 @@ public class TestPackages extends SolrCloudTestCase {
   }
 
   @Test
+  @SuppressWarnings("ReferenceEquality")
   public void testSchemaPlugins() throws Exception {
     String COLLECTION_NAME = "testSchemaLoadingColl";
     System.setProperty("managed.schema.mutable", "true");
@@ -775,7 +772,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
@@ -817,7 +814,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
@@ -878,8 +875,11 @@ public class TestPackages extends SolrCloudTestCase {
     try {
       req.process(client);
       fail("should have failed with message : " + expectErrorMsg);
-    } catch (BaseHttpSolrClient.RemoteExecutionException e) {
-      String msg = e.getMetaData()._getStr(errPath, "");
+    } catch (RemoteSolrException e) {
+      String msg =
+          Objects.requireNonNullElse(
+                  Utils.getObjectByPath(e.getRemoteErrorObject(), false, errPath), "")
+              .toString();
       assertTrue(
           "should have failed with message: " + expectErrorMsg + "actual message : " + msg,
           msg.contains(expectErrorMsg));
