@@ -23,14 +23,13 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.regex.Pattern;
 import org.apache.commons.io.file.PathUtils;
 import org.apache.lucene.tests.mockfile.FilterPath;
 import org.apache.solr.client.api.model.CoreStatusResponse;
-import org.apache.solr.client.solrj.JacksonContentWriter;
+import org.apache.solr.client.solrj.request.json.JacksonContentWriter;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.CoreAdminParams;
 import org.apache.solr.common.util.NamedList;
@@ -39,6 +38,7 @@ import org.apache.solr.core.CoreContainer;
 import org.apache.solr.handler.admin.CoreAdminHandler;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
+import org.apache.solr.util.ErrorLogMuter;
 import org.junit.After;
 import org.junit.Before;
 import org.slf4j.Logger;
@@ -80,15 +80,13 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     // initCore will trigger an upgrade to managed schema, since the solrconfig has
     // <schemaFactory class="ManagedIndexSchemaFactory" ... />
     System.setProperty("managed.schema.mutable", "false");
-    System.setProperty("enable.update.log", "false");
+    System.setProperty("solr.index.updatelog.enabled", "false");
     initCore("solrconfig-managed-schema.xml", "schema-minimal.xml", tmpSolrHome);
   }
 
   @After
   public void afterClass() {
     deleteCore();
-    System.clearProperty("managed.schema.mutable");
-    System.clearProperty("enable.update.log");
   }
 
   public void testUpgrade() throws Exception {
@@ -176,15 +174,15 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
         statusByCore.get(collection).schema);
   }
 
+  @SuppressWarnings("try")
   public void testAddFieldWhenNotMutable() throws Exception {
     assertSchemaResource(collection, "managed-schema.xml");
     String errString = "This ManagedIndexSchema is not mutable.";
-    ignoreException(Pattern.quote(errString));
-    try {
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex(Pattern.quote(errString))) {
       IndexSchema oldSchema = h.getCore().getLatestSchema();
       String fieldName = "new_field";
       String fieldType = "string";
-      Map<String, ?> options = Collections.emptyMap();
+      Map<String, ?> options = Map.of();
       SchemaField newField = oldSchema.newField(fieldName, fieldType, options);
       IndexSchema newSchema = oldSchema.addField(newField);
       h.getCore().setLatestSchema(newSchema);
@@ -199,8 +197,6 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
           SolrException.ErrorCode.SERVER_ERROR,
           "Unexpected error, expected error matching: " + errString,
           e);
-    } finally {
-      resetExceptionIgnores();
     }
   }
 
@@ -236,6 +232,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
             "<field name=\"new_field\" type=\"string\" stored=\"false\"/>"));
   }
 
+  @SuppressWarnings("try")
   public void testAddedFieldIndexableAndQueryable() throws Exception {
     assertSchemaResource(collection, "managed-schema.xml");
     deleteCore();
@@ -252,8 +249,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     clearIndex();
 
     String errString = "unknown field 'new_field'";
-    ignoreException(Pattern.quote(errString));
-    try {
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex(Pattern.quote(errString))) {
       assertU(adoc("new_field", "thing1 thing2", "str", "X"));
       fail();
     } catch (Exception e) {
@@ -266,8 +262,6 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
           SolrException.ErrorCode.SERVER_ERROR,
           "Unexpected error, expected error matching: " + errString,
           e);
-    } finally {
-      resetExceptionIgnores();
     }
     assertU(commit());
     assertQ(req("new_field:thing1"), "//*[@numFound='0']");
@@ -287,6 +281,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     assertQ(req("new_field:thing1"), "//*[@numFound='1']");
   }
 
+  @SuppressWarnings("try")
   public void testAddFieldWhenItAlreadyExists() throws Exception {
     deleteCore();
     Path managedSchemaFile = tmpConfDir.resolve("managed-schema.xml");
@@ -300,8 +295,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
         h.getCore().getLatestSchema().getFieldOrNull("str"));
 
     String errString = "Field 'str' already exists.";
-    ignoreException(Pattern.quote(errString));
-    try {
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex(Pattern.quote(errString))) {
       Map<String, Object> options = new HashMap<>();
       IndexSchema oldSchema = h.getCore().getLatestSchema();
       String fieldName = "str";
@@ -320,11 +314,10 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
           SolrException.ErrorCode.SERVER_ERROR,
           "Unexpected error, expected error matching: " + errString,
           e);
-    } finally {
-      resetExceptionIgnores();
     }
   }
 
+  @SuppressWarnings("try")
   public void testAddSameFieldTwice() throws Exception {
     deleteCore();
     Path managedSchemaFile = tmpConfDir.resolve("managed-schema.xml");
@@ -343,8 +336,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     h.getCore().setLatestSchema(newSchema);
 
     String errString = "Field 'new_field' already exists.";
-    ignoreException(Pattern.quote(errString));
-    try {
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex(Pattern.quote(errString))) {
       newSchema = newSchema.addField(newField);
       h.getCore().setLatestSchema(newSchema);
       fail("Should fail when adding the same field twice");
@@ -358,11 +350,10 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
           SolrException.ErrorCode.SERVER_ERROR,
           "Unexpected error, expected error matching: " + errString,
           e);
-    } finally {
-      resetExceptionIgnores();
     }
   }
 
+  @SuppressWarnings("try")
   public void testAddDynamicField() throws Exception {
     deleteCore();
     Path managedSchemaFile = tmpConfDir.resolve("managed-schema.xml");
@@ -376,8 +367,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
         h.getCore().getLatestSchema().getFieldOrNull("*_s"));
 
     String errString = "Can't add dynamic field '*_s'.";
-    ignoreException(Pattern.quote(errString));
-    try {
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex(Pattern.quote(errString))) {
       Map<String, Object> options = new HashMap<>();
       IndexSchema oldSchema = h.getCore().getLatestSchema();
       String fieldName = "*_s";
@@ -396,8 +386,6 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
           SolrException.ErrorCode.SERVER_ERROR,
           "Unexpected error, expected error matching: " + errString,
           e);
-    } finally {
-      resetExceptionIgnores();
     }
   }
 
