@@ -17,7 +17,6 @@
 package org.apache.solr.uninverting;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.lucene.document.Document;
@@ -80,15 +79,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", sortType));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // 'bar' comes before 'foo'
     assertEquals("bar", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -119,15 +117,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", sortType));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null comes first
     assertNull(searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -156,15 +153,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "foo", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", sortType, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // 'foo' comes after 'bar' in reverse order
     assertEquals("foo", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -194,8 +190,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -203,7 +198,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null comes first
     assertNull(searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -234,8 +229,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -243,7 +237,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     assertEquals("foo", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
     // null comes last
@@ -274,8 +268,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -284,7 +277,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     assertEquals("bar", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
     // null comes last
@@ -315,8 +308,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -325,7 +317,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null comes first
     assertNull(searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -352,7 +344,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(SortField.FIELD_DOC);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // docid 0, then docid 1
     assertEquals(0, td.scoreDocs[0].doc);
     assertEquals(1, td.scoreDocs[1].doc);
@@ -378,7 +370,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(new SortField(null, SortField.Type.DOC, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // docid 1, then docid 0
     assertEquals(1, td.scoreDocs[0].doc);
     assertEquals(0, td.scoreDocs[1].doc);
@@ -404,11 +396,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort();
 
     TopDocs actual = searcher.search(new TermQuery(new Term("value", "foo")), 10, sort);
-    assertEquals(2, actual.totalHits.value);
+    assertEquals(2, actual.totalHits.value());
 
     TopDocs expected = searcher.search(new TermQuery(new Term("value", "foo")), 10);
     // the two topdocs should be the same
-    assertEquals(expected.totalHits.value, actual.totalHits.value);
+    assertEquals(expected.totalHits.value(), actual.totalHits.value());
     for (int i = 0; i < actual.scoreDocs.length; i++) {
       assertEquals(actual.scoreDocs[i].doc, expected.scoreDocs[i].doc);
     }
@@ -436,11 +428,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(new SortField(null, SortField.Type.SCORE, true));
 
     TopDocs actual = searcher.search(new TermQuery(new Term("value", "foo")), 10, sort);
-    assertEquals(2, actual.totalHits.value);
+    assertEquals(2, actual.totalHits.value());
 
     TopDocs expected = searcher.search(new TermQuery(new Term("value", "foo")), 10);
     // the two topdocs should be the reverse of each other
-    assertEquals(expected.totalHits.value, actual.totalHits.value);
+    assertEquals(expected.totalHits.value(), actual.totalHits.value());
     assertEquals(actual.scoreDocs[0].doc, expected.scoreDocs[1].doc);
     assertEquals(actual.scoreDocs[1].doc, expected.scoreDocs[0].doc);
     TestUtil.checkReader(ir);
@@ -465,15 +457,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -498,15 +489,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as a 0
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -533,8 +523,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -543,7 +532,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as an Integer.MAX_VALUE
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -570,15 +559,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
     assertEquals("300000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -602,15 +590,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -633,15 +620,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as a 0
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -667,8 +653,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -677,7 +662,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as an Integer.MAX_VALUE
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -701,15 +686,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
     assertEquals("300000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -735,16 +719,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -768,16 +750,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -803,9 +783,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -814,7 +792,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Long.MAX_VALUE
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -840,16 +818,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
     assertEquals("3000000000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -872,16 +848,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -903,16 +877,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -937,9 +909,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -948,7 +918,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Long.MAX_VALUE
     assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -971,16 +941,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
     assertEquals("3000000000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1006,16 +974,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1039,16 +1005,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1074,9 +1038,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -1085,7 +1047,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Float.MAX_VALUE
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1111,16 +1073,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
     assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1143,16 +1103,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1174,16 +1132,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1208,9 +1164,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -1219,7 +1173,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Float.MAX_VALUE
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1242,16 +1196,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
     assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1281,16 +1233,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals(
@@ -1316,16 +1266,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", -0d));
     writer.addDocument(doc);
     doc = new Document();
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // numeric order
     double v0 =
         searcher
@@ -1369,16 +1317,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as a 0
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1412,9 +1358,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -1423,7 +1367,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as Double.MAX_VALUE
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals(
@@ -1456,16 +1400,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
     assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals(
@@ -1495,15 +1437,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals(
@@ -1528,15 +1469,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     writer.addDocument(doc);
     doc = new Document();
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // numeric order
     double v0 =
         searcher
@@ -1578,15 +1518,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as a 0
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1618,8 +1557,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -1628,7 +1566,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as Double.MAX_VALUE
     assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals(
@@ -1658,15 +1596,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
     assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals(
@@ -1695,8 +1632,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("t", "1", Field.Store.NO));
     w.addDocument(doc);
 
-    IndexReader r =
-        UninvertingReader.wrap(DirectoryReader.open(w), Collections.singletonMap("f", Type.SORTED));
+    IndexReader r = UninvertingReader.wrap(DirectoryReader.open(w), Map.of("f", Type.SORTED));
     w.close();
     IndexSearcher s = newSearcher(r);
     TopDocs hits =
@@ -1704,7 +1640,7 @@ public class TestFieldCacheSort extends SolrTestCase {
             new TermQuery(new Term("t", "1")),
             10,
             new Sort(new SortField("f", SortField.Type.STRING)));
-    assertEquals(2, hits.totalHits.value);
+    assertEquals(2, hits.totalHits.value());
     // null sorts first
     assertEquals(1, hits.scoreDocs[0].doc);
     assertEquals(0, hits.scoreDocs[1].doc);
@@ -1731,8 +1667,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     writer.close();
     Sort sort = new Sort(new SortField("string", SortField.Type.STRING), SortField.FIELD_DOC);
     IndexReader reader =
-        UninvertingReader.wrap(
-            DirectoryReader.open(indexStore), Collections.singletonMap("string", Type.SORTED));
+        UninvertingReader.wrap(DirectoryReader.open(indexStore), Map.of("string", Type.SORTED));
     IndexSearcher searcher = new IndexSearcher(reader);
     expectThrows(
         IllegalStateException.class,
@@ -1765,8 +1700,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     }
 
     IndexReader r =
-        UninvertingReader.wrap(
-            DirectoryReader.open(w), Collections.singletonMap("id", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(DirectoryReader.open(w), Map.of("id", Type.LEGACY_INTEGER));
     w.close();
     Query q = new TermQuery(new Term("body", "text"));
     TestUtil.checkReader(r);
@@ -1781,31 +1715,31 @@ public class TestFieldCacheSort extends SolrTestCase {
 
     Sort sort = new Sort();
     TopDocs td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort = new Sort(SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort = new Sort(new SortField("int", SortField.Type.INT), SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort = new Sort(new SortField("string", SortField.Type.STRING, true), SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort =
         new Sort(new SortField("string_val", SortField.Type.STRING_VAL, true), SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort =
         new Sort(
             new SortField("float", SortField.Type.FLOAT),
             new SortField("string", SortField.Type.STRING));
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
   }
 
   /** Tests sorting a single document */
@@ -1815,15 +1749,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     Document doc = new Document();
     doc.add(newStringField("value", "foo", Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", Type.SORTED));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.SORTED));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.STRING));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(1, td.totalHits.value);
+    assertEquals(1, td.totalHits.value());
     assertEquals("foo", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
@@ -1837,18 +1770,17 @@ public class TestFieldCacheSort extends SolrTestCase {
     Document doc = new Document();
     doc.add(newStringField("value", "foo", Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", Type.SORTED));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.SORTED));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.STRING));
 
     TopDocs expected = searcher.search(new TermQuery(new Term("value", "foo")), 10);
-    assertEquals(1, expected.totalHits.value);
+    assertEquals(1, expected.totalHits.value());
     TopDocs actual = searcher.search(new TermQuery(new Term("value", "foo")), 10, sort, true);
 
-    assertEquals(expected.totalHits.value, actual.totalHits.value);
+    assertEquals(expected.totalHits.value(), actual.totalHits.value());
     assertEquals(expected.scoreDocs[0].score, actual.scoreDocs[0].score, 0F);
     TestUtil.checkReader(ir);
     ir.close();
@@ -1882,7 +1814,7 @@ public class TestFieldCacheSort extends SolrTestCase {
             new SortField("value", SortField.Type.STRING));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // 'bar' comes before 'foo'
     assertEquals("bar", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
@@ -1910,7 +1842,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     bq.add(new TermQuery(new Term("value", "foo")), Occur.SHOULD);
     bq.add(new MatchAllDocsQuery(), Occur.SHOULD);
     TopDocs td = searcher.search(bq.build(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     if (Float.isNaN(td.scoreDocs[0].score) == false
         && Float.isNaN(td.scoreDocs[1].score) == false) {
       assertEquals(1, td.scoreDocs[0].doc);
