@@ -18,7 +18,6 @@
 package org.apache.solr.client.solrj.impl;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
@@ -55,10 +54,10 @@ public class ZkDistribStateManager implements DistribStateManager {
     try {
       data = getData(path);
     } catch (KeeperException.NoNodeException | NoSuchElementException e) {
-      return Collections.emptyMap();
+      return Map.of();
     }
     if (data == null || data.getData() == null || data.getData().length == 0) {
-      return Collections.emptyMap();
+      return Map.of();
     }
     return (Map<String, Object>) Utils.fromJSON(data.getData());
   }
@@ -66,7 +65,7 @@ public class ZkDistribStateManager implements DistribStateManager {
   @Override
   public boolean hasData(String path) throws IOException, KeeperException, InterruptedException {
     try {
-      return zkClient.exists(path, true);
+      return zkClient.exists(path);
     } catch (InterruptedException e) {
       Thread.currentThread().interrupt();
       throw new AlreadyClosedException();
@@ -77,7 +76,7 @@ public class ZkDistribStateManager implements DistribStateManager {
   public List<String> listData(String path, Watcher watcher)
       throws NoSuchElementException, IOException, KeeperException, InterruptedException {
     try {
-      return zkClient.getChildren(path, watcher, true);
+      return zkClient.getChildren(path, watcher);
     } catch (KeeperException.NoNodeException e) {
       throw new NoSuchElementException(path);
     } catch (InterruptedException e) {
@@ -97,7 +96,7 @@ public class ZkDistribStateManager implements DistribStateManager {
       throws NoSuchElementException, IOException, KeeperException, InterruptedException {
     Stat stat = new Stat();
     try {
-      byte[] bytes = zkClient.getData(path, watcher, stat, true);
+      byte[] bytes = zkClient.getData(path, watcher, stat);
       return new VersionedData(
           stat.getVersion(),
           bytes,
@@ -128,7 +127,7 @@ public class ZkDistribStateManager implements DistribStateManager {
   public void makePath(String path, byte[] data, CreateMode createMode, boolean failOnExists)
       throws AlreadyExistsException, IOException, KeeperException, InterruptedException {
     try {
-      zkClient.makePath(path, data, createMode, null, failOnExists, true);
+      zkClient.makePath(path, data, createMode, null, failOnExists);
     } catch (KeeperException.NodeExistsException e) {
       throw new AlreadyExistsException(path);
     } catch (InterruptedException e) {
@@ -145,7 +144,7 @@ public class ZkDistribStateManager implements DistribStateManager {
           KeeperException,
           InterruptedException {
     try {
-      return zkClient.create(path, data, mode, true);
+      return zkClient.create(path, data, mode);
     } catch (KeeperException.NoNodeException e) {
       throw new NoSuchElementException(path);
     } catch (KeeperException.NodeExistsException e) {
@@ -165,7 +164,7 @@ public class ZkDistribStateManager implements DistribStateManager {
           KeeperException,
           InterruptedException {
     try {
-      zkClient.delete(path, version, true);
+      zkClient.delete(path, version);
     } catch (KeeperException.NoNodeException e) {
       throw new NoSuchElementException(path);
     } catch (KeeperException.NotEmptyException e) {
@@ -186,7 +185,7 @@ public class ZkDistribStateManager implements DistribStateManager {
           KeeperException,
           InterruptedException {
     try {
-      zkClient.setData(path, data, version, true);
+      zkClient.setData(path, data, version);
     } catch (KeeperException.NoNodeException e) {
       throw new NoSuchElementException(path);
     } catch (KeeperException.BadVersionException e) {
