@@ -16,8 +16,6 @@
  */
 package org.apache.solr.common.cloud;
 
-import static org.apache.solr.common.util.Utils.STANDARDOBJBUILDER;
-
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.time.Instant;
@@ -25,26 +23,17 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Consumer;
-import java.util.function.Function;
 import java.util.stream.Stream;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.DocCollection.CollectionStateProps;
-import org.apache.solr.common.cloud.Replica.ReplicaStateProps;
 import org.apache.solr.common.util.CollectionUtil;
-import org.apache.solr.common.util.Utils;
-import org.noggit.JSONParser;
-import org.noggit.JSONWriter;
-import org.noggit.ObjectBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -165,79 +154,9 @@ public class ClusterState implements MapWriter {
     return immutableCollectionStates.keySet();
   }
 
-  /**
-   * Get a map of collection name vs DocCollection objects
-   *
-   * <p>Implementation note: This method resolves the collection reference by calling {@link
-   * CollectionRef#get()} which can make a call to ZooKeeper. This is necessary because the
-   * semantics of how collection list is loaded have changed in SOLR-6629.
-   *
-   * @return a map of collection name vs DocCollection object
-   * @deprecated see {@link #collectionStream()}
-   */
-  @Deprecated
-  public Map<String, DocCollection> getCollectionsMap() {
-    Map<String, DocCollection> result = CollectionUtil.newHashMap(collectionStates.size());
-    for (Entry<String, CollectionRef> entry : collectionStates.entrySet()) {
-      DocCollection collection = entry.getValue().get();
-      if (collection != null) {
-        result.put(entry.getKey(), collection);
-      }
-    }
-    return result;
-  }
-
   /** Get names of the currently live nodes. */
   public Set<String> getLiveNodes() {
     return liveNodes;
-  }
-
-  @Deprecated
-  public String getShardId(String nodeName, String coreName) {
-    return getShardId(null, nodeName, coreName);
-  }
-
-  @Deprecated
-  public String getShardId(String collectionName, String nodeName, String coreName) {
-    if (coreName == null || nodeName == null) {
-      return null;
-    }
-    Collection<CollectionRef> states = Collections.emptyList();
-    if (collectionName != null) {
-      CollectionRef c = collectionStates.get(collectionName);
-      if (c != null) states = Collections.singletonList(c);
-    } else {
-      states = collectionStates.values();
-    }
-
-    for (CollectionRef ref : states) {
-      DocCollection coll = ref.get();
-      if (coll == null) continue; // this collection got removed in between, skip
-      // TODO: for really large clusters, we could 'index' on this
-      return Optional.ofNullable(coll.getReplicasOnNode(nodeName)).stream()
-          .flatMap(List::stream)
-          .filter(r -> coreName.equals(r.getStr(ReplicaStateProps.CORE_NAME)))
-          .map(Replica::getShard)
-          .findAny()
-          .orElse(null);
-    }
-    return null;
-  }
-
-  @Deprecated
-  public Map<String, List<Replica>> getReplicaNamesPerCollectionOnNode(final String nodeName) {
-    Map<String, List<Replica>> replicaNamesPerCollectionOnNode = new HashMap<>();
-    collectionStates.values().stream()
-        .map(CollectionRef::get)
-        .filter(Objects::nonNull)
-        .forEach(
-            col -> {
-              List<Replica> replicas = col.getReplicasOnNode(nodeName);
-              if (replicas != null && !replicas.isEmpty()) {
-                replicaNamesPerCollectionOnNode.put(col.getName(), replicas);
-              }
-            });
-    return replicaNamesPerCollectionOnNode;
   }
 
   /** Check if node is alive. */
@@ -254,40 +173,6 @@ public class ClusterState implements MapWriter {
     return sb.toString();
   }
 
-  /**
-   * Create a ClusterState from Json. This method doesn't support legacy configName location and
-   * thus don't call it where that's important
-   *
-   * @param bytes a byte array of a Json representation of a mapping from collection name to the
-   *     Json representation of a {@link DocCollection} as written by {@link #write(JSONWriter)}. It
-   *     can represent one or more collections.
-   * @param liveNodes list of live nodes
-   * @param creationTime assigns this date to all {@link DocCollection} referenced by the returned
-   *     {@link ClusterState}
-   * @return the ClusterState
-   */
-  @Deprecated
-  public static ClusterState createFromJson(
-      int version,
-      byte[] bytes,
-      Set<String> liveNodes,
-      Instant creationTime,
-      DocCollection.PrsSupplier prsSupplier) {
-    if (bytes == null || bytes.length == 0) {
-      return new ClusterState(liveNodes, Collections.<String, DocCollection>emptyMap());
-    }
-    @SuppressWarnings({"unchecked"})
-    Map<String, Object> stateMap =
-        (Map<String, Object>) Utils.fromJSON(bytes, 0, bytes.length, STR_INTERNER_OBJ_BUILDER);
-    return createFromCollectionMap(version, stateMap, liveNodes, creationTime, prsSupplier);
-  }
-
-  @Deprecated
-  public static ClusterState createFromJson(int version, byte[] bytes, Set<String> liveNodes) {
-    return createFromJson(version, bytes, liveNodes, Instant.EPOCH, null);
-  }
-
-  @Deprecated
   public static ClusterState createFromCollectionMap(
       int version,
       Map<String, Object> stateMap,
@@ -309,12 +194,6 @@ public class ClusterState implements MapWriter {
     }
 
     return new ClusterState(collections, liveNodes);
-  }
-
-  @Deprecated
-  public static ClusterState createFromCollectionMap(
-      int version, Map<String, Object> stateMap, Set<String> liveNodes) {
-    return createFromCollectionMap(version, stateMap, liveNodes, Instant.EPOCH, null);
   }
 
   /**
@@ -341,7 +220,7 @@ public class ClusterState implements MapWriter {
       // legacy format from 4.0... there was no separate "shards" level to contain the collection
       // shards.
       slices = Slice.loadAllFromMap(name, objs);
-      props = Collections.emptyMap();
+      props = Map.of();
     } else {
       slices = Slice.loadAllFromMap(name, sliceObjs);
       objs.remove(CollectionStateProps.SHARDS);
@@ -399,33 +278,11 @@ public class ClusterState implements MapWriter {
   }
 
   /**
-   * Be aware that this may return collections which may not exist now. You can confirm that this
-   * collection exists after verifying CollectionRef.get() != null
-   *
-   * @deprecated see {@link #collectionStream()}
-   */
-  @Deprecated
-  public Map<String, CollectionRef> getCollectionStates() {
-    return immutableCollectionStates;
-  }
-
-  /**
    * Streams the resolved {@link DocCollection}s, which will often fetch from ZooKeeper for each one
    * for a many-collection scenario. Use this sparingly; some users have thousands of collections!
    */
   public Stream<DocCollection> collectionStream() {
     return collectionStates.values().stream().map(CollectionRef::get).filter(Objects::nonNull);
-  }
-
-  /**
-   * Calls {@code consumer} with a resolved {@link DocCollection}s for all collections. Use this
-   * sparingly in case there are many collections.
-   *
-   * @deprecated see {@link #collectionStream()}
-   */
-  @Deprecated
-  public void forEachCollection(Consumer<DocCollection> consumer) {
-    collectionStream().forEach(consumer);
   }
 
   public static class CollectionRef {
@@ -477,16 +334,5 @@ public class ClusterState implements MapWriter {
   /** The approximate number of collections. */
   public int size() {
     return collectionStates.size();
-  }
-
-  private static volatile Function<JSONParser, ObjectBuilder> STR_INTERNER_OBJ_BUILDER =
-      STANDARDOBJBUILDER;
-
-  /**
-   * @lucene.internal
-   */
-  public static void setStrInternerParser(Function<JSONParser, ObjectBuilder> fun) {
-    if (fun == null) return;
-    STR_INTERNER_OBJ_BUILDER = fun;
   }
 }
